# notion-mpm

./: .env.local.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  mypy.ini  pyproject.toml
agents/: __init__.py  search_and_read.py  workspace_summary.py
docs/: goals.md
src/notion_mpm/: __init__.py  __version__.py  container.py
src/notion_mpm/api/: __init__.py  _client.py  blocks.py  comments.py  databases.py  pages.py  search.py  users.py
src/notion_mpm/auth/: __init__.py  models.py  token_manager.py
src/notion_mpm/cli/: __init__.py  main.py
src/notion_mpm/server/: __init__.py  notion_mcp_server.py
src/notion_mpm/services/: __init__.py  notion_service.py
tests/: test_auth_models.py  test_blocks_helpers.py  test_client.py  test_comments_helpers.py  test_container.py  test_service.py
